--- a/processes/setup.ipynb
+++ b/processes/setup.ipynb
@@ -2,39 +2,39 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'src'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[11], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01msrc\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mAPI_interface\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m API\n",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'src'"
-     ]
-    }
-   ],
+   "outputs": [],
+   "source": [
+    "# export PATH=\"$HOME/.local/bin:$PATH\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "from src.API_interface import API"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'API' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[6], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mAPI\u001b[49m\u001b[38;5;241m.\u001b[39msecret_to_access_token()\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'API' is not defined"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "jq: error: Could not open file Secrets/config.json: No such file or directory\n",
+      "jq: error: Could not open file Secrets/config.json: No such file or directory\n",
+      "  % Total    % Received % Xferd  Average Speed   Time    Time     Time  Current\n",
+      "                                 Dload  Upload   Total   Spent    Left  Speed\n",
+      "  0     0    0     0    0     0      0      0 --:--:-- --:--:-- --:--:--     0Warning: Failed to open the file Secrets/access_token.json: No such file or \n",
+      "Warning: directory\n",
+      " 23   143    0     0  100    33      0    361 --:--:-- --:--:-- --:--:--   370\n",
+      "curl: (56) Failure writing output to destination, passed 110 returned 4294967295\n"
      ]
     }
    ],
