test pre-commit hooks 2

--- a/processes/setup.ipynb
+++ b/processes/setup.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -29,7 +29,7 @@
      "text": [
       "  % Total    % Received % Xferd  Average Speed   Time    Time     Time  Current\n",
       "                                 Dload  Upload   Total   Spent    Left  Speed\n",
-      "100   873  100   676  100   197   4437   1293 --:--:-- --:--:-- --:--:--  5743\n"
+      "100   873  100   676  100   197   4137   1205 --:--:-- --:--:-- --:--:--  5388\n"
      ]
     }
    ],
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -48,7 +48,7 @@
      "text": [
       "  % Total    % Received % Xferd  Average Speed   Time    Time     Time  Current\n",
       "                                 Dload  Upload   Total   Spent    Left  Speed\n",
-      "100 31328  100 31328    0     0   160k      0 --:--:-- --:--:-- --:--:--  162k\n"
+      "100 31328  100 31328    0     0   207k      0 --:--:-- --:--:-- --:--:--  209k\n"
      ]
     }
    ],
@@ -61,7 +61,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "API.connect_to_banks()"
+   ]
   }
  ],
  "metadata": {
