--- a/processes/setup.ipynb
+++ b/processes/setup.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# export PATH=\"$HOME/.local/bin:$PATH\""
+    "# export PATH=\"$HOME/.local/bin:$PATH\""
    ]
   },
   {
@@ -15,7 +15,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from src.API_interface import API"
+    "from src.api_interface import API"
    ]
   },
   {
