allow for multiple keys

--- a/processes/setup.ipynb
+++ b/processes/setup.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,16 +20,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "+ FILENAME=LLOYDS.json\n",
+      "+ SECRET_FILE=secrets/secrets/LLOYDS.json\n",
+      "+ ACCESS_TOKEN_FILE=secrets/access_token/LLOYDS.json\n",
+      "++ jq -r .secret_id secrets/secrets/LLOYDS.json\n",
+      "+ SECRET_ID=f1cd3dba-b1c0-4884-889b-d4aa570b148b\n",
+      "++ jq -r .secret_key secrets/secrets/LLOYDS.json\n",
+      "+ SECRET_KEY=acdfa6fb09f049a6521841317e6fb3b3b28eb41ac1d9d029c82768bd9cd1451a430a5503ef84847daddabdf2b8d6f59ad53b02ec27862987b78f96719c294d5f\n",
+      "+ echo 'SECRET_ID: f1cd3dba-b1c0-4884-889b-d4aa570b148b'\n",
+      "+ echo 'SECRET_KEY: acdfa6fb09f049a6521841317e6fb3b3b28eb41ac1d9d029c82768bd9cd1451a430a5503ef84847daddabdf2b8d6f59ad53b02ec27862987b78f96719c294d5f'\n",
+      "+ mkdir -p secrets/access_token\n",
+      "+ curl -X POST https://bankaccountdata.gocardless.com/api/v2/token/new/ -H 'accept: application/json' -H 'Content-Type: application/json' -d '{\"secret_id\":\"f1cd3dba-b1c0-4884-889b-d4aa570b148b\", \"secret_key\":\"acdfa6fb09f049a6521841317e6fb3b3b28eb41ac1d9d029c82768bd9cd1451a430a5503ef84847daddabdf2b8d6f59ad53b02ec27862987b78f96719c294d5f\"}' -o secrets/access_token/LLOYDS.json\n",
       "  % Total    % Received % Xferd  Average Speed   Time    Time     Time  Current\n",
       "                                 Dload  Upload   Total   Spent    Left  Speed\n",
-      "100   873  100   676  100   197   4137   1205 --:--:-- --:--:-- --:--:--  5388\n"
+      "100   873  100   676  100   197   4351   1268 --:--:-- --:--:-- --:--:--  5632\n",
+      "+ FILENAME=AMEX.json\n",
+      "+ SECRET_FILE=secrets/secrets/AMEX.json\n",
+      "+ ACCESS_TOKEN_FILE=secrets/access_token/AMEX.json\n",
+      "++ jq -r .secret_id secrets/secrets/AMEX.json\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "SECRET_ID: f1cd3dba-b1c0-4884-889b-d4aa570b148b\n",
+      "SECRET_KEY: acdfa6fb09f049a6521841317e6fb3b3b28eb41ac1d9d029c82768bd9cd1451a430a5503ef84847daddabdf2b8d6f59ad53b02ec27862987b78f96719c294d5f\n",
+      "SECRET_ID: 11c3cb64-b4c4-4fe2-b9e0-5e8f801a449b\n",
+      "SECRET_KEY: dd512c3ee0b20b14a16dfbbde4488954fb031edc4e8c2c75898ca96a29a940ff8f09e28b161c45b48849d48fa35f37be95557ecf5f1402f48ac94436556c45c6\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "+ SECRET_ID=11c3cb64-b4c4-4fe2-b9e0-5e8f801a449b\n",
+      "++ jq -r .secret_key secrets/secrets/AMEX.json\n",
+      "+ SECRET_KEY=dd512c3ee0b20b14a16dfbbde4488954fb031edc4e8c2c75898ca96a29a940ff8f09e28b161c45b48849d48fa35f37be95557ecf5f1402f48ac94436556c45c6\n",
+      "+ echo 'SECRET_ID: 11c3cb64-b4c4-4fe2-b9e0-5e8f801a449b'\n",
+      "+ echo 'SECRET_KEY: dd512c3ee0b20b14a16dfbbde4488954fb031edc4e8c2c75898ca96a29a940ff8f09e28b161c45b48849d48fa35f37be95557ecf5f1402f48ac94436556c45c6'\n",
+      "+ mkdir -p secrets/access_token\n",
+      "+ curl -X POST https://bankaccountdata.gocardless.com/api/v2/token/new/ -H 'accept: application/json' -H 'Content-Type: application/json' -d '{\"secret_id\":\"11c3cb64-b4c4-4fe2-b9e0-5e8f801a449b\", \"secret_key\":\"dd512c3ee0b20b14a16dfbbde4488954fb031edc4e8c2c75898ca96a29a940ff8f09e28b161c45b48849d48fa35f37be95557ecf5f1402f48ac94436556c45c6\"}' -o secrets/access_token/AMEX.json\n",
+      "  % Total    % Received % Xferd  Average Speed   Time    Time     Time  Current\n",
+      "                                 Dload  Upload   Total   Spent    Left  Speed\n",
+      "100   873  100   676  100   197   4821   1405 --:--:-- --:--:-- --:--:--  6235\n"
      ]
     }
    ],
@@ -58,12 +99,118 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Using Bank ID: LLOYDS_LOYDGB2L\n",
+      "{\"reference\":{\"summary\":\"Client reference must be unique\",\"detail\":\"Client reference: 1 already exists\"},\"status_code\":400}\n",
+      "+ TOKEN_FILE=secrets/access_token.json\n",
+      "++ jq -r .access secrets/access_token.json\n",
+      "+ ACCESS_TOKEN=eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJ0b2tlbl90eXBlIjoiYWNjZXNzIiwiZXhwIjoxNzM0NzQxNzI1LCJqdGkiOiI5NGIzOTUzMmRhN2M0ZjEwYTQ5NmU3MzdhZmQ2NDUxMiIsInV1aWQiOiJmYjhhZjA5MS0yOGZiLTQ5YjQtODIwMC1iMmY0ZTk0NzM4NmIiLCJhbGxvd2VkX2NpZHJzIjpbIjAuMC4wLjAvMCIsIjo6LzAiXX0.Xc09j2vGuVYaQQo3junkZvQ4n9XAxBkFw7tjC5qrBt4\n",
+      "+ '[' -z LLOYDS_LOYDGB2L ']'\n",
+      "+ BANK_ID=LLOYDS_LOYDGB2L\n",
+      "+ echo 'Using Bank ID: LLOYDS_LOYDGB2L'\n",
+      "+ curl -X POST https://bankaccountdata.gocardless.com/api/v2/requisitions/ -H 'accept: application/json' -H 'Content-Type: application/json' -H 'Authorization: Bearer eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJ0b2tlbl90eXBlIjoiYWNjZXNzIiwiZXhwIjoxNzM0NzQxNzI1LCJqdGkiOiI5NGIzOTUzMmRhN2M0ZjEwYTQ5NmU3MzdhZmQ2NDUxMiIsInV1aWQiOiJmYjhhZjA5MS0yOGZiLTQ5YjQtODIwMC1iMmY0ZTk0NzM4NmIiLCJhbGxvd2VkX2NpZHJzIjpbIjAuMC4wLjAvMCIsIjo6LzAiXX0.Xc09j2vGuVYaQQo3junkZvQ4n9XAxBkFw7tjC5qrBt4' -d '{\"redirect\": \"http://www.yourwebpage.com\",\n",
+      "       \"institution_id\": \"LLOYDS_LOYDGB2L\",\n",
+      "       \"reference\": \"1\",\n",
+      "       \"user_language\":\"EN\" }'\n",
+      "  % Total    % Received % Xferd  Average Speed   Time    Time     Time  Current\n",
+      "                                 Dload  Upload   Total   Spent    Left  Speed\n",
+      "\n",
+      "  0     0    0     0    0     0      0      0 --:--:-- --:--:-- --:--:--     0\n",
+      "100   264  100   123  100   141    697    799 --:--:-- --:--:-- --:--:--  1500\n",
+      "\n",
+      "Using Bank ID: AMERICAN_EXPRESS_AESUGB21\n",
+      "{\"reference\":{\"summary\":\"Client reference must be unique\",\"detail\":\"Client reference: 1 already exists\"},\"status_code\":400}\n",
+      "+ TOKEN_FILE=secrets/access_token.json\n",
+      "++ jq -r .access secrets/access_token.json\n",
+      "+ ACCESS_TOKEN=eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJ0b2tlbl90eXBlIjoiYWNjZXNzIiwiZXhwIjoxNzM0NzQxNzI1LCJqdGkiOiI5NGIzOTUzMmRhN2M0ZjEwYTQ5NmU3MzdhZmQ2NDUxMiIsInV1aWQiOiJmYjhhZjA5MS0yOGZiLTQ5YjQtODIwMC1iMmY0ZTk0NzM4NmIiLCJhbGxvd2VkX2NpZHJzIjpbIjAuMC4wLjAvMCIsIjo6LzAiXX0.Xc09j2vGuVYaQQo3junkZvQ4n9XAxBkFw7tjC5qrBt4\n",
+      "+ '[' -z AMERICAN_EXPRESS_AESUGB21 ']'\n",
+      "+ BANK_ID=AMERICAN_EXPRESS_AESUGB21\n",
+      "+ echo 'Using Bank ID: AMERICAN_EXPRESS_AESUGB21'\n",
+      "+ curl -X POST https://bankaccountdata.gocardless.com/api/v2/requisitions/ -H 'accept: application/json' -H 'Content-Type: application/json' -H 'Authorization: Bearer eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJ0b2tlbl90eXBlIjoiYWNjZXNzIiwiZXhwIjoxNzM0NzQxNzI1LCJqdGkiOiI5NGIzOTUzMmRhN2M0ZjEwYTQ5NmU3MzdhZmQ2NDUxMiIsInV1aWQiOiJmYjhhZjA5MS0yOGZiLTQ5YjQtODIwMC1iMmY0ZTk0NzM4NmIiLCJhbGxvd2VkX2NpZHJzIjpbIjAuMC4wLjAvMCIsIjo6LzAiXX0.Xc09j2vGuVYaQQo3junkZvQ4n9XAxBkFw7tjC5qrBt4' -d '{\"redirect\": \"http://www.yourwebpage.com\",\n",
+      "       \"institution_id\": \"AMERICAN_EXPRESS_AESUGB21\",\n",
+      "       \"reference\": \"1\",\n",
+      "       \"user_language\":\"EN\" }'\n",
+      "  % Total    % Received % Xferd  Average Speed   Time    Time     Time  Current\n",
+      "                                 Dload  Upload   Total   Spent    Left  Speed\n",
+      "\n",
+      "  0     0    0     0    0     0      0      0 --:--:-- --:--:-- --:--:--     0\n",
+      "100   274  100   123  100   151    690    847 --:--:-- --:--:-- --:--:--  1539\n",
+      "\n",
+      "Using Bank ID: CHASE_CHASGB2L\n",
+      "{\"reference\":{\"summary\":\"Client reference must be unique\",\"detail\":\"Client reference: 1 already exists\"},\"status_code\":400}\n",
+      "+ TOKEN_FILE=secrets/access_token.json\n",
+      "++ jq -r .access secrets/access_token.json\n",
+      "+ ACCESS_TOKEN=eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJ0b2tlbl90eXBlIjoiYWNjZXNzIiwiZXhwIjoxNzM0NzQxNzI1LCJqdGkiOiI5NGIzOTUzMmRhN2M0ZjEwYTQ5NmU3MzdhZmQ2NDUxMiIsInV1aWQiOiJmYjhhZjA5MS0yOGZiLTQ5YjQtODIwMC1iMmY0ZTk0NzM4NmIiLCJhbGxvd2VkX2NpZHJzIjpbIjAuMC4wLjAvMCIsIjo6LzAiXX0.Xc09j2vGuVYaQQo3junkZvQ4n9XAxBkFw7tjC5qrBt4\n",
+      "+ '[' -z CHASE_CHASGB2L ']'\n",
+      "+ BANK_ID=CHASE_CHASGB2L\n",
+      "+ echo 'Using Bank ID: CHASE_CHASGB2L'\n",
+      "+ curl -X POST https://bankaccountdata.gocardless.com/api/v2/requisitions/ -H 'accept: application/json' -H 'Content-Type: application/json' -H 'Authorization: Bearer eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJ0b2tlbl90eXBlIjoiYWNjZXNzIiwiZXhwIjoxNzM0NzQxNzI1LCJqdGkiOiI5NGIzOTUzMmRhN2M0ZjEwYTQ5NmU3MzdhZmQ2NDUxMiIsInV1aWQiOiJmYjhhZjA5MS0yOGZiLTQ5YjQtODIwMC1iMmY0ZTk0NzM4NmIiLCJhbGxvd2VkX2NpZHJzIjpbIjAuMC4wLjAvMCIsIjo6LzAiXX0.Xc09j2vGuVYaQQo3junkZvQ4n9XAxBkFw7tjC5qrBt4' -d '{\"redirect\": \"http://www.yourwebpage.com\",\n",
+      "       \"institution_id\": \"CHASE_CHASGB2L\",\n",
+      "       \"reference\": \"1\",\n",
+      "       \"user_language\":\"EN\" }'\n",
+      "  % Total    % Received % Xferd  Average Speed   Time    Time     Time  Current\n",
+      "                                 Dload  Upload   Total   Spent    Left  Speed\n",
+      "\n",
+      "  0     0    0     0    0     0      0      0 --:--:-- --:--:-- --:--:--     0\n",
+      "100   263  100   123  100   140    697    793 --:--:-- --:--:-- --:--:--  1485\n",
+      "100   263  100   123  100   140    696    792 --:--:-- --:--:-- --:--:--  1485\n",
+      "\n",
+      "Using Bank ID: REVOLUT_REVOGB21\n",
+      "{\"reference\":{\"summary\":\"Client reference must be unique\",\"detail\":\"Client reference: 1 already exists\"},\"status_code\":400}\n",
+      "+ TOKEN_FILE=secrets/access_token.json\n",
+      "++ jq -r .access secrets/access_token.json\n",
+      "+ ACCESS_TOKEN=eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJ0b2tlbl90eXBlIjoiYWNjZXNzIiwiZXhwIjoxNzM0NzQxNzI1LCJqdGkiOiI5NGIzOTUzMmRhN2M0ZjEwYTQ5NmU3MzdhZmQ2NDUxMiIsInV1aWQiOiJmYjhhZjA5MS0yOGZiLTQ5YjQtODIwMC1iMmY0ZTk0NzM4NmIiLCJhbGxvd2VkX2NpZHJzIjpbIjAuMC4wLjAvMCIsIjo6LzAiXX0.Xc09j2vGuVYaQQo3junkZvQ4n9XAxBkFw7tjC5qrBt4\n",
+      "+ '[' -z REVOLUT_REVOGB21 ']'\n",
+      "+ BANK_ID=REVOLUT_REVOGB21\n",
+      "+ echo 'Using Bank ID: REVOLUT_REVOGB21'\n",
+      "+ curl -X POST https://bankaccountdata.gocardless.com/api/v2/requisitions/ -H 'accept: application/json' -H 'Content-Type: application/json' -H 'Authorization: Bearer eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJ0b2tlbl90eXBlIjoiYWNjZXNzIiwiZXhwIjoxNzM0NzQxNzI1LCJqdGkiOiI5NGIzOTUzMmRhN2M0ZjEwYTQ5NmU3MzdhZmQ2NDUxMiIsInV1aWQiOiJmYjhhZjA5MS0yOGZiLTQ5YjQtODIwMC1iMmY0ZTk0NzM4NmIiLCJhbGxvd2VkX2NpZHJzIjpbIjAuMC4wLjAvMCIsIjo6LzAiXX0.Xc09j2vGuVYaQQo3junkZvQ4n9XAxBkFw7tjC5qrBt4' -d '{\"redirect\": \"http://www.yourwebpage.com\",\n",
+      "       \"institution_id\": \"REVOLUT_REVOGB21\",\n",
+      "       \"reference\": \"1\",\n",
+      "       \"user_language\":\"EN\" }'\n",
+      "  % Total    % Received % Xferd  Average Speed   Time    Time     Time  Current\n",
+      "                                 Dload  Upload   Total   Spent    Left  Speed\n",
+      "\n",
+      "  0     0    0     0    0     0      0      0 --:--:-- --:--:-- --:--:--     0\n",
+      "100   265  100   123  100   142    744    859 --:--:-- --:--:-- --:--:--  1606\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "API.connect_to_banks()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  % Total    % Received % Xferd  Average Speed   Time    Time     Time  Current\n",
+      "                                 Dload  Upload   Total   Spent    Left  Speed\n",
+      "100   122  100   122    0     0   1144      0 --:--:-- --:--:-- --:--:--  1150\n"
+     ]
+    }
+   ],
+   "source": [
+    "API.list_banks()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -82,7 +229,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.9.21"
   }
  },
  "nbformat": 4,
