--- a/processes/setup.ipynb
+++ b/processes/setup.ipynb
@@ -6,15 +6,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# export PATH=\"$HOME/.local/bin:$PATH\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "from src.utils.serialization import PickleHandler\n",
     "from src.config import ROOT_PATH, SECRETS_PATH\n",
     "from src.architecture.secret_handling import SecretManager\n",
@@ -24,19 +15,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gocardless = Navigator(SECRETS_PATH + \"navigator-3.json\")\n",
+    "PickleHandler.save(gocardless, ROOT_PATH + \"/data/navigator.pkl\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Object saved to /Users/albyscotney/gocardless/data/gocardless.pkl\n"
+      "  % Total    % Received % Xferd  Average Speed   Time    Time     Time  Current\n",
+      "                                 Dload  Upload   Total   Spent    Left  Speed\n",
+      "100 31328  100 31328    0     0   227k      0 --:--:-- --:--:-- --:--:--  228k\n"
      ]
     }
    ],
    "source": [
-    "gocardless = PickleHandler().load(ROOT_PATH + \"/data/gocardless.pkl\")\n",
     "gocardless.get_banks_list(ROOT_PATH + \"/data/all_banks.json\")"
    ]
   },
@@ -44,13 +46,97 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Retrying in 1 seconds....\r"
+     ]
+    }
+   ],
    "source": [
     "Lloyds = Bank(\n",
     "    name=\"Lloyds\",\n",
     "    bank_id=\"LLOYDS_LOYDGB2L\",\n",
-    "    secret_loc=SECRETS_PATH + \"//lloyds-6.json\",\n",
+    "    secret=SECRETS_PATH + \"lloyds3.json\",\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'id': '752376d3-e930-4129-a947-12323023b1d2',\n",
+       " 'created': '2024-12-23T16:27:42.134088Z',\n",
+       " 'redirect': 'http://www.yourwebpage.com',\n",
+       " 'status': 'LN',\n",
+       " 'institution_id': 'LLOYDS_LOYDGB2L',\n",
+       " 'agreement': '965d9686-f619-4248-8621-c6fcac6b9b0f',\n",
+       " 'reference': '1734971261',\n",
+       " 'accounts': ['168b2256-20ee-47c1-8198-8361b31c99f3',\n",
+       "  '8a36edd0-dfa2-40e5-83d5-7321843df63f'],\n",
+       " 'user_language': 'EN',\n",
+       " 'link': 'https://ob.gocardless.com/ob-psd2/start/25c908d6-40dd-42aa-8bce-cabce8a69c78/LLOYDS_LOYDGB2L',\n",
+       " 'ssn': None,\n",
+       " 'account_selection': False,\n",
+       " 'redirect_immediate': False}"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Lloyds.account_numbers"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'168b2256-20ee-47c1-8198-8361b31c99f3': Account(bank=Bank(name='Lloyds', requisition={'id': '752376d3-e930-4129-a947-12323023b1d2', 'created': '2024-12-23T16:27:42.134088Z', 'redirect': 'http://www.yourwebpage.com', 'status': 'CR', 'institution_id': 'LLOYDS_LOYDGB2L', 'agreement': '965d9686-f619-4248-8621-c6fcac6b9b0f', 'reference': '1734971261', 'accounts': [], 'user_language': 'EN', 'link': 'https://ob.gocardless.com/ob-psd2/start/25c908d6-40dd-42aa-8bce-cabce8a69c78/LLOYDS_LOYDGB2L', 'ssn': None, 'account_selection': False, 'redirect_immediate': False}, account_numbers={'id': '752376d3-e930-4129-a947-12323023b1d2', 'created': '2024-12-23T16:27:42.134088Z', 'redirect': 'http://www.yourwebpage.com', 'status': 'LN', 'institution_id': 'LLOYDS_LOYDGB2L', 'agreement': '965d9686-f619-4248-8621-c6fcac6b9b0f', 'reference': '1734971261', 'accounts': ['168b2256-20ee-47c1-8198-8361b31c99f3', '8a36edd0-dfa2-40e5-83d5-7321843df63f'], 'user_language': 'EN', 'link': 'https://ob.gocardless.com/ob-psd2/start/25c908d6-40dd-42aa-8bce-cabce8a69c78/LLOYDS_LOYDGB2L', 'ssn': None, 'account_selection': False, 'redirect_immediate': False}), account_number='168b2256-20ee-47c1-8198-8361b31c99f3', secret=<src.architecture.secret_handling.SecretManager object at 0x10577a9a0>, balance={'balances': [{'balanceAmount': {'amount': '1888.63', 'currency': 'GBP'}, 'balanceType': 'interimAvailable', 'referenceDate': '2024-12-23'}, {'balanceAmount': {'amount': '-111.37', 'currency': 'GBP'}, 'balanceType': 'interimBooked', 'referenceDate': '2024-12-23'}]}, transactions={'summary': 'Rate limit exceeded', 'detail': 'The rate limit for this resource is 4/day. Please try again in 12050 seconds', 'status_code': 429}),\n",
+       " '8a36edd0-dfa2-40e5-83d5-7321843df63f': Account(bank=Bank(name='Lloyds', requisition={'id': '752376d3-e930-4129-a947-12323023b1d2', 'created': '2024-12-23T16:27:42.134088Z', 'redirect': 'http://www.yourwebpage.com', 'status': 'CR', 'institution_id': 'LLOYDS_LOYDGB2L', 'agreement': '965d9686-f619-4248-8621-c6fcac6b9b0f', 'reference': '1734971261', 'accounts': [], 'user_language': 'EN', 'link': 'https://ob.gocardless.com/ob-psd2/start/25c908d6-40dd-42aa-8bce-cabce8a69c78/LLOYDS_LOYDGB2L', 'ssn': None, 'account_selection': False, 'redirect_immediate': False}, account_numbers={'id': '752376d3-e930-4129-a947-12323023b1d2', 'created': '2024-12-23T16:27:42.134088Z', 'redirect': 'http://www.yourwebpage.com', 'status': 'LN', 'institution_id': 'LLOYDS_LOYDGB2L', 'agreement': '965d9686-f619-4248-8621-c6fcac6b9b0f', 'reference': '1734971261', 'accounts': ['168b2256-20ee-47c1-8198-8361b31c99f3', '8a36edd0-dfa2-40e5-83d5-7321843df63f'], 'user_language': 'EN', 'link': 'https://ob.gocardless.com/ob-psd2/start/25c908d6-40dd-42aa-8bce-cabce8a69c78/LLOYDS_LOYDGB2L', 'ssn': None, 'account_selection': False, 'redirect_immediate': False}), account_number='8a36edd0-dfa2-40e5-83d5-7321843df63f', secret=<src.architecture.secret_handling.SecretManager object at 0x10577a9a0>, balance={'balances': [{'balanceAmount': {'amount': '3398.75', 'currency': 'GBP'}, 'balanceType': 'interimBooked', 'referenceDate': '2024-12-23'}, {'balanceAmount': {'amount': '3391.75', 'currency': 'GBP'}, 'balanceType': 'interimAvailable', 'referenceDate': '2024-12-23'}]}, transactions={'summary': 'Rate limit exceeded', 'detail': 'The rate limit for this resource is 4/day. Please try again in 12050 seconds', 'status_code': 429})}"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Lloyds.accounts.key"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'summary': 'Rate limit exceeded',\n",
+       " 'detail': 'The rate limit for this resource is 4/day. Please try again in 12050 seconds',\n",
+       " 'status_code': 429}"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Lloyds.accounts[\"168b2256-20ee-47c1-8198-8361b31c99f3\"].transactions"
    ]
   },
   {
