update file format

--- a/processes/setup.ipynb
+++ b/processes/setup.ipynb
@@ -8,9 +8,8 @@
    "source": [
     "from src.utils.serialization import PickleHandler\n",
     "from src.config import ROOT_PATH, SECRETS_PATH\n",
-    "from src.architecture.secret_handling import SecretManager\n",
     "from src.utils.navigator import Navigator\n",
-    "from src.architecture.banks import Bank"
+    "from src.architecture.user import User"
    ]
   },
   {
@@ -19,32 +18,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "gocardless = Navigator(SECRETS_PATH + \"navigator-3.json\")\n",
-    "PickleHandler.save(gocardless, ROOT_PATH + \"/data/navigator.pkl\")"
+    "Alby = User(\"Alby Scotney\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "  % Total    % Received % Xferd  Average Speed   Time    Time     Time  Current\n",
-      "                                 Dload  Upload   Total   Spent    Left  Speed\n",
-      "100 31328  100 31328    0     0   227k      0 --:--:-- --:--:-- --:--:--  228k\n"
-     ]
-    }
-   ],
-   "source": [
-    "gocardless.get_banks_list(ROOT_PATH + \"/data/all_banks.json\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -56,123 +35,11 @@
     }
    ],
    "source": [
-    "Lloyds = Bank(\n",
+    "Alby.add_bank(\n",
     "    name=\"Lloyds\",\n",
     "    bank_id=\"SANDBOXFINANCE_SFIN0000\",\n",
     "    secret=SECRETS_PATH + \"lloyds3.json\",\n",
     ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'14db8545-2b21-433a-9979-dcab0d5adb0c'"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "Lloyds."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'168b2256-20ee-47c1-8198-8361b31c99f3': Account(bank=Bank(name='Lloyds', requisition={'id': '752376d3-e930-4129-a947-12323023b1d2', 'created': '2024-12-23T16:27:42.134088Z', 'redirect': 'http://www.yourwebpage.com', 'status': 'CR', 'institution_id': 'LLOYDS_LOYDGB2L', 'agreement': '965d9686-f619-4248-8621-c6fcac6b9b0f', 'reference': '1734971261', 'accounts': [], 'user_language': 'EN', 'link': 'https://ob.gocardless.com/ob-psd2/start/25c908d6-40dd-42aa-8bce-cabce8a69c78/LLOYDS_LOYDGB2L', 'ssn': None, 'account_selection': False, 'redirect_immediate': False}, account_numbers={'id': '752376d3-e930-4129-a947-12323023b1d2', 'created': '2024-12-23T16:27:42.134088Z', 'redirect': 'http://www.yourwebpage.com', 'status': 'LN', 'institution_id': 'LLOYDS_LOYDGB2L', 'agreement': '965d9686-f619-4248-8621-c6fcac6b9b0f', 'reference': '1734971261', 'accounts': ['168b2256-20ee-47c1-8198-8361b31c99f3', '8a36edd0-dfa2-40e5-83d5-7321843df63f'], 'user_language': 'EN', 'link': 'https://ob.gocardless.com/ob-psd2/start/25c908d6-40dd-42aa-8bce-cabce8a69c78/LLOYDS_LOYDGB2L', 'ssn': None, 'account_selection': False, 'redirect_immediate': False}), account_number='168b2256-20ee-47c1-8198-8361b31c99f3', secret=<src.architecture.secret_handling.SecretManager object at 0x10577a9a0>, balance={'balances': [{'balanceAmount': {'amount': '1888.63', 'currency': 'GBP'}, 'balanceType': 'interimAvailable', 'referenceDate': '2024-12-23'}, {'balanceAmount': {'amount': '-111.37', 'currency': 'GBP'}, 'balanceType': 'interimBooked', 'referenceDate': '2024-12-23'}]}, transactions={'summary': 'Rate limit exceeded', 'detail': 'The rate limit for this resource is 4/day. Please try again in 12050 seconds', 'status_code': 429}),\n",
-       " '8a36edd0-dfa2-40e5-83d5-7321843df63f': Account(bank=Bank(name='Lloyds', requisition={'id': '752376d3-e930-4129-a947-12323023b1d2', 'created': '2024-12-23T16:27:42.134088Z', 'redirect': 'http://www.yourwebpage.com', 'status': 'CR', 'institution_id': 'LLOYDS_LOYDGB2L', 'agreement': '965d9686-f619-4248-8621-c6fcac6b9b0f', 'reference': '1734971261', 'accounts': [], 'user_language': 'EN', 'link': 'https://ob.gocardless.com/ob-psd2/start/25c908d6-40dd-42aa-8bce-cabce8a69c78/LLOYDS_LOYDGB2L', 'ssn': None, 'account_selection': False, 'redirect_immediate': False}, account_numbers={'id': '752376d3-e930-4129-a947-12323023b1d2', 'created': '2024-12-23T16:27:42.134088Z', 'redirect': 'http://www.yourwebpage.com', 'status': 'LN', 'institution_id': 'LLOYDS_LOYDGB2L', 'agreement': '965d9686-f619-4248-8621-c6fcac6b9b0f', 'reference': '1734971261', 'accounts': ['168b2256-20ee-47c1-8198-8361b31c99f3', '8a36edd0-dfa2-40e5-83d5-7321843df63f'], 'user_language': 'EN', 'link': 'https://ob.gocardless.com/ob-psd2/start/25c908d6-40dd-42aa-8bce-cabce8a69c78/LLOYDS_LOYDGB2L', 'ssn': None, 'account_selection': False, 'redirect_immediate': False}), account_number='8a36edd0-dfa2-40e5-83d5-7321843df63f', secret=<src.architecture.secret_handling.SecretManager object at 0x10577a9a0>, balance={'balances': [{'balanceAmount': {'amount': '3398.75', 'currency': 'GBP'}, 'balanceType': 'interimBooked', 'referenceDate': '2024-12-23'}, {'balanceAmount': {'amount': '3391.75', 'currency': 'GBP'}, 'balanceType': 'interimAvailable', 'referenceDate': '2024-12-23'}]}, transactions={'summary': 'Rate limit exceeded', 'detail': 'The rate limit for this resource is 4/day. Please try again in 12050 seconds', 'status_code': 429})}"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "Lloyds.accounts.key"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Account(bank=Bank(name='Lloyds', requisition={'id': '752376d3-e930-4129-a947-12323023b1d2', 'created': '2024-12-23T16:27:42.134088Z', 'redirect': 'http://www.yourwebpage.com', 'status': 'CR', 'institution_id': 'LLOYDS_LOYDGB2L', 'agreement': '965d9686-f619-4248-8621-c6fcac6b9b0f', 'reference': '1734971261', 'accounts': [], 'user_language': 'EN', 'link': 'https://ob.gocardless.com/ob-psd2/start/25c908d6-40dd-42aa-8bce-cabce8a69c78/LLOYDS_LOYDGB2L', 'ssn': None, 'account_selection': False, 'redirect_immediate': False}, account_numbers={'id': '752376d3-e930-4129-a947-12323023b1d2', 'created': '2024-12-23T16:27:42.134088Z', 'redirect': 'http://www.yourwebpage.com', 'status': 'LN', 'institution_id': 'LLOYDS_LOYDGB2L', 'agreement': '965d9686-f619-4248-8621-c6fcac6b9b0f', 'reference': '1734971261', 'accounts': ['168b2256-20ee-47c1-8198-8361b31c99f3', '8a36edd0-dfa2-40e5-83d5-7321843df63f'], 'user_language': 'EN', 'link': 'https://ob.gocardless.com/ob-psd2/start/25c908d6-40dd-42aa-8bce-cabce8a69c78/LLOYDS_LOYDGB2L', 'ssn': None, 'account_selection': False, 'redirect_immediate': False}), account_number='168b2256-20ee-47c1-8198-8361b31c99f3', secret=<src.architecture.secret_handling.SecretManager object at 0x10577a9a0>, balance={'balances': [{'balanceAmount': {'amount': '1888.63', 'currency': 'GBP'}, 'balanceType': 'interimAvailable', 'referenceDate': '2024-12-23'}, {'balanceAmount': {'amount': '-111.37', 'currency': 'GBP'}, 'balanceType': 'interimBooked', 'referenceDate': '2024-12-23'}]}, transactions={'summary': 'Rate limit exceeded', 'detail': 'The rate limit for this resource is 4/day. Please try again in 12050 seconds', 'status_code': 429})"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "Lloyds.accounts[\"168b2256-20ee-47c1-8198-8361b31c99f3\"]."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Object loaded from /Users/albyscotney/gocardless/data/banks/lloyds.pkl\n"
-     ]
-    }
-   ],
-   "source": [
-    "# PickleHandler().save(Lloyds, ROOT_PATH + \"/data/banks/lloyds.pkl\")\n",
-    "Lloyds = PickleHandler().load(ROOT_PATH + \"/data/banks/lloyds.pkl\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'id': '2fce42a4-218a-463a-b7da-d6bbd1de6aff',\n",
-       " 'created': '2024-12-22T10:22:47.794332Z',\n",
-       " 'redirect': 'http://www.yourwebpage.com',\n",
-       " 'status': 'LN',\n",
-       " 'institution_id': 'LLOYDS_LOYDGB2L',\n",
-       " 'agreement': '8d60b5df-b814-4351-8251-664b70b0114f',\n",
-       " 'reference': '1734862967',\n",
-       " 'accounts': ['168b2256-20ee-47c1-8198-8361b31c99f3',\n",
-       "  '8a36edd0-dfa2-40e5-83d5-7321843df63f'],\n",
-       " 'user_language': 'EN',\n",
-       " 'link': 'https://ob.gocardless.com/ob-psd2/start/d3c39b77-819c-4cb9-967c-704c8d2b83ad/LLOYDS_LOYDGB2L',\n",
-       " 'ssn': None,\n",
-       " 'account_selection': False,\n",
-       " 'redirect_immediate': False}"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "Lloyds.account_numbers"
    ]
   },
   {
@@ -216,9 +83,9 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>2024122401645718-1</td>\n",
-       "      <td>2024122401645718-1</td>\n",
-       "      <td>2024-12-25</td>\n",
+       "      <td>2024122501645718-1</td>\n",
+       "      <td>2024122501645718-1</td>\n",
+       "      <td>2024-12-26</td>\n",
        "      <td>Maximilian Hoffmann</td>\n",
        "      <td>Alles Gute zum Geburtstag mein Freund!</td>\n",
        "      <td>PMNT</td>\n",
@@ -229,9 +96,9 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>2024122401645721-1</td>\n",
-       "      <td>2024122401645721-1</td>\n",
-       "      <td>2024-12-24</td>\n",
+       "      <td>2024122501645721-1</td>\n",
+       "      <td>2024122501645721-1</td>\n",
+       "      <td>2024-12-25</td>\n",
        "      <td>Maximilian Hoffmann</td>\n",
        "      <td>Alles Gute zum Geburtstag mein Freund!</td>\n",
        "      <td>PMNT</td>\n",
@@ -242,9 +109,9 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>2024122401645724-1</td>\n",
-       "      <td>2024122401645724-1</td>\n",
-       "      <td>2024-12-23</td>\n",
+       "      <td>2024122501645724-1</td>\n",
+       "      <td>2024122501645724-1</td>\n",
+       "      <td>2024-12-24</td>\n",
        "      <td>Maximilian Hoffmann</td>\n",
        "      <td>Alles Gute zum Geburtstag mein Freund!</td>\n",
        "      <td>PMNT</td>\n",
@@ -259,9 +126,9 @@
       ],
       "text/plain": [
        "        transactionId      entryReference   valueDate         creditorName  \\\n",
-       "0  2024122401645718-1  2024122401645718-1  2024-12-25  Maximilian Hoffmann   \n",
-       "1  2024122401645721-1  2024122401645721-1  2024-12-24  Maximilian Hoffmann   \n",
-       "2  2024122401645724-1  2024122401645724-1  2024-12-23  Maximilian Hoffmann   \n",
+       "0  2024122501645718-1  2024122501645718-1  2024-12-26  Maximilian Hoffmann   \n",
+       "1  2024122501645721-1  2024122501645721-1  2024-12-25  Maximilian Hoffmann   \n",
+       "2  2024122501645724-1  2024122501645724-1  2024-12-24  Maximilian Hoffmann   \n",
        "\n",
        "        remittanceInformationUnstructured bankTransactionCode  \\\n",
        "0  Alles Gute zum Geburtstag mein Freund!                PMNT   \n",
@@ -285,7 +152,9 @@
     }
    ],
    "source": [
-    "Lloyds.accounts[Lloyds.account_numbers[\"accounts\"][0]].transactions.pending"
+    "Alby.banks[\"Lloyds\"].accounts[\n",
+    "    Alby.banks[\"Lloyds\"].account_numbers[\"accounts\"][0]\n",
+    "].transactions.pending"
    ]
   },
   {
